switch to minted package

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -244,7 +244,8 @@ First, we install some additional extensions that are required by our OpenMS nod
 \noindent In addition, we need to install R for the statistical downstream analysis. Choose the directory that matches your operating system, double-click the R installer and follow the instructions. We recommend to use the default settings whenever possible. On macOS you also need to install XQuartz from the same directory.\\
 
 \noindent Afterwards open your R installation. If you use Windows, you will find an "R x64 3.6.X" icon on your desktop. If you use macOS, you will find R in your Applications folder. In R type the following lines (you might also copy them from the file \directory{R / install\_R\_packages.R} folder on the USB stick):
-\begin{lstlisting}[aboveskip=8pt]
+\begin{listing}
+\begin{minted}{R}
   install.packages('Rserve',,"http://rforge.net/",type="source")
   install.packages("Cairo")
   install.packages("devtools")
@@ -254,7 +255,8 @@ First, we install some additional extensions that are required by our OpenMS nod
 	install.packages("BiocManager")
   BiocManager::install()
   BiocManager::install(c("MSstats"))
-\end{lstlisting}
+\end{minted}
+\end{listing}
 
 \noindent In KNIME, click on \menu{KNIME > Preferences}, select the category \menu{KNIME > R} and set the "Path to R Home" to your installation path. You can use the following settings, if you installed R as described above:
 \begin{itemize}
@@ -508,7 +510,7 @@ You will find some basic information of the data contained in the mzML file, e.g
 
 \begin{figure}
 \centering
-\includegraphics[width=0.59\textwidth]{graphics/knime_setup/Minimal_FileInfo.svg}
+\includegraphics[width=0.59\textwidth]{graphics/knime_setup/Minimal_FileInfo}
 \caption{A minimal workflow calling FileInfo on a single file.}
 \label{fig:knime_minimal}
 \end{figure}
@@ -640,10 +642,10 @@ If you get an error message like:
 
 If R is correctly recognized we can start writing an R script. Consider that we are interested in plotting the first 
 and second coordinates and color them according to their cluster number. In R this can be done in a single line.
-In the \KNIMENODE{R View (Table)} text editor, enter the following code:
-\begin{lstlisting}
+In the \KNIMENODE{R View (Table)} text editor, enter the following code: \\
+\begin{minted}{R}
 plot(x=knime.in$Universe_0_0, y=knime.in$Universe_0_1, main="Plotting column Universe_0_0 vs. Universe_0_1", col=knime.in$"Cluster Membership")
-\end{lstlisting}
+\end{minted}
         
 \textbf{Explanation:}
 The table provided as input to the \KNIMENODE{R View (Table)} node is available as R \texttt{data.frame} with name 
