--- a/Handout/labelfree.tex
+++ b/Handout/labelfree.tex
@@ -186,12 +186,14 @@ Every row in this table corresponds to a so-called consensus feature, i.e., a pe
     \item Now, since we only want to plot intensities, we can add a \KNIMENODE{Column Filter} node \\ \menu{Data Manipulation > Column > Filter}, connect its input port to the \textit{Filtered} output port of the \KNIMENODE{Row Filter}, and open its configuration dialog. We could either manually select the columns we want to keep, or, more elegantly, select \textit{Wildcard/Regex Selection} and enter \textit{intensity\_?} as the pattern. KNIME will interactively show you which columns your pattern applies to while you're typing.
     \item Since we want to plot log intensities, we will now compute the log of all intensity values in our table. The easiest way to do this in KNIME is a small piece of R code. Add an \KNIMENODE{R Snippet} node \menu{R} after \KNIMENODE{Column Filter} and double-click to configure. In the \textit{R Script} text editor, enter the following code:
     %TODO: check if minues stays the same after compiling
-        \begin{lstlisting}
+        \begin{listing}
+\begin{minted}{R}
             x <- knime.in       # store copy of input table in x
             x[x == 0] <- NA     # replace all zeros by NA (= missing value)
             x <- log10(x)       # compute log of all values
             knime.out <- x      # write result to output table
-        \end{lstlisting}
+        \end{minted}
+\end{listing}
     \item Now we are ready to plot! Add a \KNIMENODE{Box Plot (local)} node \menu{Views - Swing (local)} after the \KNIMENODE{R Snippet} node, execute it, and open its view. If everything went well, you should see a significant fold change of your human peptide intensities across the three runs.
     \item In order to verify that the concentration of background peptides is constant in all three runs, you can just copy and paste the three nodes after \KNIMENODE{Row Splitter} and connect the duplicated \KNIMENODE{Column Filter} to the second output port (\textit{Filtered Out}) of \KNIMENODE{Row Splitter}, as shown in Fig. \ref{fig:lfq_data_analysis}. Execute and open the view of your second \KNIMENODE{Box Plot}.
     \item That's it! You have constructed an entire identification and label-free quantification workflow including a simple data analysis using KNIME!
@@ -368,18 +370,22 @@ you can use a \KNIMENODE{URI Port to Variable} node and use the variable in the 
 
 \paragraph{Preprocessing} \mbox{}\newline
 \noindent The first node (\KNIMENODE{Table to R}) loads MSstats as well as the data from the previous KNIME node and performs a preprocessing step on the input data. The inline R script (that needs to be pasted into the config dialog of the node)
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
 library(MSstats)
 data <- knime.in
 quant <- OpenMStoMSstatsFormat(data, removeProtein_with1Feature = FALSE)
-\end{lstlisting}
+\end{minted}
+\end{listing}
 allows further preparation of the data produced by \KNIMENODE{MSstatsConverter} before the actual analysis is performed. In this example, the 
 lines with proteins, which were identified with only one feature, were retained. Alternatively they could be removed.
 \newline
 \noindent In the same node, most importantly, the following line:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
 processed.quant <- dataProcess(quant, censoredInt = 'NA')
-\end{lstlisting}
+\end{minted}
+\end{listing}
 transforms the data into a format that is understood by MSstats.
 Here, \texttt{dataProcess} is one of the most important functions that the
 R package provides. The function performs the following steps:
@@ -431,7 +437,8 @@ We can specify the comparisons that we want to make in a
 
 \noindent We can generate such a matrix in R using the following code snippet in (for example) a new \KNIMENODE{R to R} node
 that takes over the R workspace from the previous node with all its variables:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
 	comparison1<-matrix(c(-1,1,0,0),nrow=1)
 	comparison2<-matrix(c(-1,0,1,0),nrow=1)
 	comparison3<-matrix(c(-1,0,0,1),nrow=1)
@@ -440,19 +447,24 @@ that takes over the R workspace from the previous node with all its variables:
 	comparison6<-matrix(c(0,0,-1,1),nrow=1)
 	comparison <- rbind(comparison1, comparison2, comparison3, comparison4, comparison5, comparison6)
 	row.names(comparison)<-c("C2-C1","C3-C1","C4-C1","C3-C2","C4-C2","C4-C3")
-\end{lstlisting}
+\end{minted}
+\end{listing}
 Here, we assemble each row in turn, concatenate them at the end, and provide row names for labeling
 the rows with the respective condition.
 
 \noindent In MSstats, the group comparison is then performed with the following line:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
 	test.MSstats <- groupComparison(contrast.matrix=comparison, data=processed.quant)
-\end{lstlisting}
+}
+\end{minted}
+\end{listing}
 No more parameters need to be set for performing the comparison.
 
 \paragraph{Result Processing}\mbox{}\newline
 \noindent In a next \KNIMENODE{R to R} node, the results are being processed. The following code snippet:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
 	test.MSstats.cr <- test.MSstats$ComparisonResult
 	
 	# Rename spiked ins to A,B,C....
@@ -487,7 +499,8 @@ No more parameters need to be set for performing the comparison.
 	return("")
 	}
 	})
-\end{lstlisting}
+\end{minted}
+\end{listing}
 will rename the spiked-in proteins to A,B,C,D,E, and F and remove the names of other proteins, which will be beneficial for the subsequent visualization, as
 for example performed in Figure~\ref{fig:msstats_1}.
 
@@ -495,34 +508,42 @@ for example performed in Figure~\ref{fig:msstats_1}.
 \paragraph{Export}\mbox{}\newline
 \noindent The last four nodes, each connected and making use of the same workspace from the last node, will export the results to a textual representation and volcano plots for further inspection. Firstly, quality control can be
 performed with the following snippet:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
 	qcplot <- dataProcessPlots(processed.quant, type="QCplot", 
 	ylimDown=0, 
 	which.Protein = 'allonly',
 	width=7, height=7, address=F)
-\end{lstlisting}
+\end{minted}
+\end{listing}
 The code for this snippet is embedded in the first output node
 of the workflow. The resulting boxplots show the log2 intensity distribution
 across the MS runs.
 
 \noindent The second node is an \KNIMENODE{R View (Workspace)} node that returns a Volcano plot which displays differentially expressed
 proteins between conditions C2 vs. C1. The plot is described in more detail in the following Result section. This is how you generate it:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
 groupComparisonPlots(data=test.MSstats.cr, type="VolcanoPlot",
                      width=12, height=12,dot.size = 2,ylimUp = 7,
                      which.Comparison = "C2-C1",
                      address=F)
-\end{lstlisting}
+\end{minted}
+\end{listing}
 
 \noindent The last two nodes export the MSstats results as a KNIME table for potential further analysis or for writing it to a (e.g. csv) file. Note that you could also write output inside the Rscript if you are familiar with it.
 Use the following for an \KNIMENODE{R to Table} node exporting all results:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
   knime.out <- test.MSstats.cr
-\end{lstlisting}
+\end{minted}
+\end{listing}
 And this for an \KNIMENODE{R to Table} node exporting only results for the spike-ins:
-\begin{lstlisting}
+\begin{listing}
+\begin{minted}{R}
   knime.out <- test.MSstats.cr.spikedins
-\end{lstlisting}
+\end{minted}
+\end{listing}
 
 
 \subsubsection{Result}
