--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -3,19 +3,29 @@
 We would like to present an automated DIA/SWATH analysis workflow for metabolomics, which takes advantage of experiment specific target-decoy assay library generation. This allows for targeted extraction, scoring and statistical validation of metabolomics DIA data \cite{Rost2014}, \cite{Teleman2015}. 
 
 \subsection{Workflow}
-
 The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). 
 
-\paragraph{Candidate identification} Feature detection, adduct grouping and accurate mass search are applied on DDA data. 
-\paragraph{Library construction}  The knowledge determined from the DDA data, about  compound identification, its potential adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees \cite{Duhrkop2019}. Afterwards transitions, which are the reference of a precursor to its fragment ions are stored in a so-called assay library. Assay libraries usually contain additional metadata (i.e. retention time, peak intensities). FDR estimation is based on the target-decoy approach \cite{Elias2007}. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method ensures the consistency of decoy spectra \cite{Scheubert2017}. Targeted extraction - The target-decoy assay library is then used to analyse SWATH data. 
-\paragraph{Targeted extraction} Chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. 
-\paragraph{Statistical validation} FDR estimation uses the PyProphet algorithm \cite{Teleman2015}. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
+\textbf{Candidate identification.} Feature detection, adduct grouping and accurate mass search are applied on DDA data. \textbf{Library construction.} The knowledge determined from the DDA data, about  compound identification, its potential adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees sugin SIRIUS 4 \cite{Duhrkop2019}. Afterwards transitions, which are the reference of a precursor to its fragment ions are stored in a so-called assay library (Fig. \ref{fig:assay_library_generation}). Assay libraries usually contain additional metadata (i.e. retention time, peak intensities). FDR estimation is based on the target-decoy approach \cite{Elias2007}. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method by Passatutto ensure the consistency of decoy spectra (Fig.\ref{fig:decoy_generation}) \cite{Scheubert2017}. The target-decoy assay library is then used to analyse the SWATH data. \textbf{Targeted extraction.} Chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. \textbf{Statistical validation} FDR estimation uses the PyProphet algorithm \cite{Teleman2015}. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
 
 \begin{figure}[!t]
   \centering
   \includegraphics[width=0.7\textwidth]{graphics/openswathmetabo/pipeline_overview.png}
-  \caption{DIAMetAlyzer - pipeline for assay library generation and targeted analysis with statistical validation. DDA data is used for candidate identification containing feature detection, adduct grouping and accurate mass search. Library construction uses fragment annotation via compositional fragmentation trees and decoy generation using a fragmentation tree re-rooting method to create a target-decoy assay library. This library is used in a second step to analyse metabolomics DIA data performing targeted extraction, scoring and statistical validation (FDR estimation).}
+  \caption{\textbf{DIAMetAlyzer - pipeline for assay library generation and targeted analysis with statistical validation} DDA data is used for candidate identification containing feature detection, adduct grouping and accurate mass search. Library construction uses fragment annotation via compositional fragmentation trees and decoy generation using a fragmentation tree re-rooting method to create a target-decoy assay library. This library is used in a second step to analyse metabolomics DIA data performing targeted extraction, scoring and statistical validation (FDR estimation).}
   \label{fig:pipline_overview}
+\end{figure}
+
+\begin{figure}[!t]
+  \centering
+  \includegraphics[width=0.8\textwidth]{graphics/openswathmetabo/assay_library_generation.png}
+  \caption{\textbf{Assay library generation}  The results of the compound identification (feature, molecular formula, adduct), with the corresponding fragment spectra  for the feature, are used to perform fragment annotation via SIRIUS, using the compositional fragmentation trees. Then, the n highest intensity transitions are extracted and stored in the assay library.}
+  \label{fig:assay_library_generation}
+\end{figure}
+
+\begin{figure}[!t]
+  \centering
+  \includegraphics[width=0.8\textwidth]{graphics/openswathmetabo/decoy_generation.png}
+  \caption{\textbf{Decoy generation} The compositional fragmentations trees from the step above are used to run the fragmentation tree re-rooting method from Passatutto, generating a compound specific decoy MS2 spectrum. Here, the n highest intensity decoy transitions are extracted and stored in the target-decoy assay library.}
+  \label{fig:decoy_generation}
 \end{figure}
 
 \subsection{Prerequisites}
@@ -28,11 +38,11 @@ Here you can install miniconda and follow the further instructions. \\
 \begin{enumerate}
   \item Create new conda python environment
     \begin{lstlisting}
-    conda create -n py37 python=3.7
+    conda create -n py39 python=3.9
     \end{lstlisting} 
-    \item Activate py37 environment
+  \item Activate py39 environment
     \begin{lstlisting}
-    conda activate py37
+    conda activate py39
     \end{lstlisting} 
   \item Install pip (see above)
   \item On the command line:
@@ -52,11 +62,11 @@ Here you can install miniconda and follow the further instructions. \\
 \begin{enumerate}
   \item Create new conda python environment
     \begin{lstlisting}
-    conda create -n py37 python=3.7
+    conda create -n py39 python=3.9
     \end{lstlisting} 
-    \item Activate py37 environment
+    \item Activate py39 environment
     \begin{lstlisting}
-    conda activate py37
+    conda activate py39
     \end{lstlisting} 
   \item On the Terminal:
     \begin{lstlisting}
@@ -71,7 +81,7 @@ Here you can install miniconda and follow the further instructions. \\
 \subsubsection{Linux}
 Use your package manager apt-get or yum, where possible.
 \begin{enumerate}
-  \item Install Python 3.7 (Debian: python-dev, RedHat: python-devel)
+  \item Install Python 3.9 (Debian: python-dev, RedHat: python-devel)
   \item Install NumPy (Debian / RedHat: python-numpy)
   \item Install setuptools (Debian / RedHat: python-setuptools)
   \item On the Terminal:
@@ -92,7 +102,7 @@ Benchmark DIA samples were prepared by spiking different commercially available 
 \url{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Tutorials/Data/DIAMetAlyzer/}
 
 \subsection{Example Workflow}
-Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (see Fig. \ref{fig:oswm_example_wf}). Inputs are the SWATH-MS data in profile mode (.mzML), a path for saving the new target-decoy assay library, the SIRIUS 4.0.1 executable, the DDA data (.mzML), custom libraries and adducts for AccurateMassSearch, the min/max fragment mass-to-charge to be able to restrict the mass of the transitions and the path to the PyProphet executable. The DDA is used for feature detection, adduct grouping, accurate mass search and forwarded to the AssayGeneratorMetabo. The constructed target library is used by the decoy generation node, which calls various python scripts to parse, reformat the input, call Passatutto and export the target-decoy assay library. The target-decoy assay library is processed with the SWATH-MS data in OpenSWATH. The results are used by PyProphet for scoring and output a list of metabolites with their respective q-value and quantitative information.
+Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (see Fig. \ref{fig:oswm_example_wf}). Inputs are the SWATH-MS data in profile mode (.mzML), a path for saving the new target-decoy assay library, the SIRIUS 4.9.0 executable, the DDA data (.mzML), custom libraries and adducts for AccurateMassSearch, the min/max fragment mass-to-charge to be able to restrict the mass of the transitions and the path to the PyProphet executable. The DDA is used for feature detection, adduct grouping, accurate mass search and forwarded to the AssayGeneratorMetabo. The constructed target library is used by the decoy generation node, which calls various python scripts to parse, reformat the input, call Passatutto and export the target-decoy assay library. The target-decoy assay library is processed with the SWATH-MS data in OpenSWATH. The results are used by PyProphet for scoring and output a list of metabolites with their respective q-value and quantitative information.
 
 \begin{figure}[!h]
   \centering
@@ -106,7 +116,7 @@ These steps need to be followed to run the workflow successfully:
 
 \begin{itemize}
 \item Add DDA Input Files (.mzML).
-\item Specify SIRIUS 4.0.1 executable.
+\item Specify SIRIUS 4.9.0 executable.
 \item Specify library files (mapping, struct) for \KNIMENODE{AccurateMassSearch}.
 \item Add positive/negative adducts lists for \KNIMENODE{AccurateMassSearch}
 \item Supply an output path for the SIRIUS workspace in the \KNIMENODE{AssayGeneratorMetabo}.
