--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -38,11 +38,15 @@ Here you can install miniconda and follow the further instructions. \\
 \begin{enumerate}
   \item Create new conda python environment
     \begin{lstlisting}
-    conda create -n py39 python=3.9
+    	\begin{minted}{bash}
+   			conda create -n py39 python=3.9
+   		\end{minted}	
     \end{lstlisting} 
   \item Activate py39 environment
     \begin{lstlisting}
-    conda activate py39    
+    	\begin{minted}{bash}
+    		conda activate py39    
+    	\end{minted}
     \end{lstlisting} 
   \item Install pip (see above)
   \item On the command line:
@@ -64,11 +68,15 @@ Here you can install miniconda and follow the further instructions. \\
 \begin{enumerate}
   \item Create new conda python environment
     \begin{lstlisting}
-    conda create -n py39 python=3.9
+    	\begin{minted}{bash}
+    		conda create -n py39 python=3.9
+    	\end{minted}
     \end{lstlisting} 
     \item Activate py39 environment
     \begin{lstlisting}
-    conda activate py39
+    	\begin{minted}{bash}
+    		conda activate py39
+    	\end{minted}
     \end{lstlisting} 
   \item On the Terminal:
     \begin{listing}
