--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -181,14 +181,14 @@ These steps need to be followed to run the workflow successfully:
 \textbf{max\_fragment\_mz} & Maximal m/z of a fragment ion choosen as a transition \\
 \textit{transitions\_threshold} & Further transitions need at least x\% of the maximum intensity. \\
 \textbf{fragment\_annotation\_score\_threshold} & Filters annotations based on the explained intensity of the peaks in a spectrum (0.8). \\
-SIRIUS (internal):
+SIRIUS (internal): & \\
 \textit{out\_workspace\_directory} & Output directory for SIRIUS workspace (Fragmentation Trees). \\
 \textit{filter\_by\_num\_masstraces} &  Features have to have at least x MassTraces. To use this parameter feature\_only is neccessary. \\
 \textit{precursor\_mass\_tolerance} & Tolerance window for precursor selection (Feature selection in regard to the precursor). \\
 \textit{precursor\_rt\_tolerance} & Tolerance allowed for matching MS2 spectra depeding on the feature size (should be around the FWHM of the chromatograms). \\
 \textit{profile} & Specify the used analysis profile (e.g. qtof). \\
 \textit{elements} & Allowed elements for assessing the putative sumformula (e.g. CHNOP[5]S[8]Cl[1]). Elements found in the isotopic pattern are added automatically, but can be specified nonetheless. \\
-Feature linking (internal):
+Feature linking (internal): & \\
 \textbf{ambiguity\_resolution\_mz\_tolerance} & Mz tolerance for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance. ) \\
 \textbf{ambiguity\_resolution\_rt\_tolerance} & RT tolerance in seconds for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance. \\
 \textbf{total\_occurrence\_filter} & Filter compound based on total occurrence in analysed samples.\\
