--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -187,8 +187,8 @@ SIRIUS (internal): & \\
 \textit{profile} & Specify the used analysis profile (e.g. qtof). \\
 \textit{elements} & Allowed elements for assessing the putative sumformula (e.g. CHNOP[5]S[8]Cl[1]). Elements found in the isotopic pattern are added automatically, but can be specified nonetheless. \\
 Feature linking (internal): & \\
-\textbf{ambiguity\_resolution mz\_tolerance} & Mz tolerance for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance. ) \\
-\textbf{ambiguity\_resolution rt\_tolerance} & RT tolerance in seconds for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance. \\
+\textbf{ambiguity\_resolution mz\_tolerance} & M/z tolerance for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance. \\
+\textbf{ambiguity\_resolution rt\_tolerance} & RT tolerance in seconds for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance.\\
 \textbf{total\_occurrence\_filter} & Filter compound based on total occurrence in analysed samples.\\
 \end{tabular*}
 \end{center}
