--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -117,6 +117,7 @@
 \usepackage{xcolor}
 \definecolor{lbcolor}{rgb}{0.9, 0.9, 0.98}
 \usepackage{minted}
+\usepackage{lstlisting}
 \usemintedstyle{tango}
 \setminted{bgcolor=lbcolor, breaklines=true, baselinestretch=0.8, showspaces=false, fontsize=\footnotesize}
 
