--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -33,64 +33,78 @@ Apart from the usual KNIME nodes, the workflow uses python scripting nodes. One 
 We suggest do use a virtual environment for the Python 3 installation on windows. 
 Here you can install miniconda and follow the further instructions. \\
 
-\begin{enumerate}
+\begin{description}
   \item Create new conda python environment
+  	    \begin{listing}
     	\begin{minted}{bash}
    			conda create -n py39 python=3.9
-   		\end{minted} \\
+   		\end{minted}
+   		\end{listing}
   \item Activate py39 environment
+    	\begin{listing}
     	\begin{minted}{bash}
     		conda activate py39    
-    	\end{minted} \\
+    	\end{minted}
+    	\end{listing}
   \item Install pip (see above)
   \item On the command line:
+    	\begin{listing}
 		\begin{minted}{bash}
     		python -m pip install -U pip
     		python -m pip install -U numpy
     		python -m pip install -U pandas
     		python -m pip isntall -U pyprophet
     		python -m pip install -U pyopenms
-    \end{minted} \\
-\end{enumerate}
+    \end{minted}
+    \end{listing}
+\end{description}
 
 \subsubsection{MacOS}
 We suggest do use a virtual environment for the Python 3 installation on Mac. 
 Here you can install miniconda and follow the further instructions. \\
 
-\begin{enumerate}
+\begin{description}
   \item Create new conda python environment
+      	\begin{listing}
     	\begin{minted}{bash}
     		conda create -n py39 python=3.9
-    	\end{minted}  \\
+    	\end{minted}
+    	\end{listing}
     \item Activate py39 environment
+        \begin{listing}
     	\begin{minted}{bash}
     		conda activate py39
-    	\end{minted} \\
+    	\end{minted}
+    	\end{listing}
   \item On the Terminal:
+      	\begin{listing}
 		\begin{minted}{bash}
     		python -m pip install -U pip
     		python -m pip install -U numpy
     		python -m pip install -U pandas
     		python -m pip isntall -U pyprophet
     		python -m pip install -U pyopenms
-		\end{minted} \\
-\end{enumerate}
+		\end{minted}
+		\end{listing}
+\end{description}
 
 \subsubsection{Linux}
 Use your package manager apt-get or yum, where possible.
-\begin{enumerate}
+\begin{description}
   \item Install Python 3.9 (Debian: python-dev, RedHat: python-devel)
   \item Install NumPy (Debian / RedHat: python-numpy)
   \item Install setuptools (Debian / RedHat: python-setuptools)
   \item On the Terminal:
+      	\begin{listing}
 		\begin{minted}{bash}
    	 		python -m pip install -U pip
     		python -m pip install -U numpy
     		python -m pip install -U pandas
     		python -m pip isntall -U pyprophet
     		python -m pip install -U pyopenms
-    \end{minted} \\
-\end{enumerate}
+        \end{minted}
+        \end{listing}
+\end{description}
 
 \subsection{Benchmark data}
 For the assay library construction pesticide mixes (Agilent Technologies, Waldbronn, Germany) were measured individually in solvent (DDA). 
@@ -202,21 +216,26 @@ Feature linking (internal): & \\
 
 \noindent In the workflow pyprophet is called after OpenSWATH, it merges the result files, which allows to get enough data for the model training. 
 
+\begin{listing}
 \begin{minted}{bash}
 pyprophet merge  --template path_to_target-decoy_assay_library.pqp --out merged.osw  ./*.osw
-\end{minted} \\
-
+\end{minted}
+\end{listing}
 \noindent Afterwards, the results are scored using the MS1 and MS2 levels and filter for metabolomics scores, which have a low correlation. 
 
+\begin{listing}
 \begin{minted}{bash}
 pyprophet score --in  merged.osw  --out  scored.osw --level ms1ms2 --ss_main_score "var_isotope_correlation_score" --ss_score_filter metabolomics
-\end{minted} \\
+\end{minted}
+\end{listing}
 \noindent Export the non filtered results: 
 
+\begin{listing}
 \begin{minted}{bash}
 pyprophet export-compound --in scored.osw --out scored + "_pyprophet_nofilter_ms1ms2.tsv" 
 --max_rs_peakgroup_qvalue 1000.0
-\end{minted} \\
+\end{minted}
+\end{listing}
 
 \noindent Please see the workflow for actual parameter values used for the benchmarking dataset. \\
 
